--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
 html{
-    background-color: blue;
+    background-color: rgb(35, 249, 224);
 }
 body
 * {
-    font-size: 16px;
     padding = 0;
     margin = 0;
     box-sizing: border-box;
@@ -17,4 +16,8 @@ h2{
 img{
     display: block;
     margin: 0 auto;
+    width: 350px;
+}
+p{
+    text-align: center;
 }
