--- a/style.css
+++ b/style.css
@@ -1,17 +1,18 @@
-html{
-    background-color: rgb(150, 232, 223);
-}
+html,
 body
 * {
     padding = 0;
     margin = 0;
     box-sizing: border-box;
+    font-family: "Montserrat", sans-serif;
 }
 h1{
     text-align: center;
+    font-size: 50px;
 }
 h2{
     text-align: center;
+    font-size: 35px;
 }
 img{
     display: block;
@@ -22,20 +23,23 @@ p{
     text-align: center;
 }
 .restaurant1{
-    background-color: rgb(138, 224, 32);
-    width: 40%;
+    background-color: rgb(187, 237, 50);
+    width: 35%;
     margin: 0 auto;
     border: 2px solid black;
+    margin-bottom: 20px;
 }
 .restaurant2{
     background-color: beige;
-    width: 40%;
+    width: 35%;
     margin: 0 auto;
     border: 2px solid black;
+    margin-bottom: 20px;
 }
 .restaurant3{
     background-color: rgb(191, 71, 71);
-    width: 40%;
+    width: 35%;
     margin: 0 auto;
     border: 2px solid black;
+    margin-bottom: 20px;
 }
